applauncherd (0.29.6) unstable; urgency=low

  * Changes: Added a command to run cpu in full speed to perf tests

 -- Nimika Keshri <nimika.1.keshri@nokia.com>  Thu, 12 May 2011 11:34:15 +0300

applauncherd (0.29.5) stable; urgency=low

  * Fixes: NB#250971 - a booster is wasted with --single-instance

 -- Alexey Shilov <alexey.shilov@nokia.com>  Tue, 10 May 2011 15:36:02 +0300

applauncherd (0.29.4) stable; urgency=low

  * Fixes: NB#253352 - libmeegotouchpreloader should be dlopened 

 -- Juha Lintula <juha.lintula@nokia.com>  Mon, 09 May 2011 13:19:13 +0300

applauncherd (0.29.3) stable; urgency=low

  * Fixes: NB#249151 - applauncher: security issue: memory area marked as writable and executable
  * Fixes: NB#247707 - Invoker interferes with qttas plugin loading for qml applications

 -- Juha Lintula <juha.lintula@nokia.com>  Tue, 03 Apr 2011 11:11:24 +0200

applauncherd (0.29.2) stable; urgency=low

  * Changes: Added 'all boosters up and running'-check in applauncherd tests
  * Fixes: NB#250976 - User Documentation for applauncherd still "Under Construction"
  * New: Content added to invokerparameters.dox
  * Changes: Added a note about splash screen to limitations.dox

 -- Nimika Keshri <nimika.1.keshri@nokia.com>  Mon, 02 May 2011 11:40:27 +0300

applauncherd (0.29.1) stable; urgency=low

  * Fixes: NB#250976 - User Documentation for applauncherd still "Under Construction"

 -- Juha Lintula <juha.lintula@nokia.com>  Thu, 24 Mar 2011 11:30:48 +0200

applauncherd (0.29.0) stable; urgency=low

  * Changes: New test added to check the daemons running after boot that uses invoker
  * Changes: More Coverity tool defect fixes
  * Changes: Exec Booster documentation added
  * Changes: Created a separate documentationpage config for MDeclarativeCache interface
  * Changes: Changed relative paths to start from righ level in doxygen conf files
  * Changes: Preloading of libcontactswidgets.so and libmeegocontrol.so added